--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,6 @@
-/*
-Color Palette
-Bbackground: #f4f5ee
-Red: #CA6A82
-Blue: #6697B9
-Purple: #98879B
-Green: #829FA6
-*/
-
 * {
-    color: black;
-    font-family: 'arial nova', Helvetica, sans-serif;
+    color:white;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 16pt;
     margin: 0;
     padding: 0;
@@ -18,238 +9,26 @@ Green: #829FA6
 }
 
 body {
-    background-color: hsl(0, 0%, 95%);
-    margin: 0 auto;
-    width: 100%;
-    scroll-behavior: smooth;
-}
-
-header {
     display: grid;
-    color: #CA6A82;
-    position: fixed;
-    padding: 1rem;
-    top: 0rem;
+    background-color: black;
     width: 100%;
-    margin: 0 auto;
-    background-color: hsla(0, 0%, 95%, 0.875);
-    backdrop-filter: blur(1px);
-    box-shadow: 0 .5rem 1rem hsla(0, 0%, 0%, 0.2);
-    z-index: 3;
-}
-
-h1 {
-    color: #ca6881;
-    font-size: 30pt;
-}
-
-h2 {
-    color: #CA6A82;
-    font-size: 24pt;
-    margin-bottom: 1rem;
-}
-
-.title2 {
-    color: #CA6A82;
-}
-
-h3 {
-    color: #CA6A82;
-    font-size: 16pt;
-    margin-bottom: .5rem;
-}
-
-h4 {
-    color: #CA6A82;
-    font-size: 12pt;
-    margin-bottom: .5rem;
-}
-
-a {
-    color: #CA6A82;
-    border-bottom: 0 solid;
-    transition: border-width .1s;
-}
-
-a:hover {
-    border-width: .1rem;
-}
-
-p {
-    font-size: 14pt;
-    width: 100%;
-    margin-bottom: 1rem;
-    line-height: 1.2rem;
-}
-
-nav {
-    display: grid;
-    width: 80%;
-    margin: 0 auto;
-    grid-gap: 1rem;
-    grid-template-columns: 1rem auto auto auto;
-}
-
-nav span a {
-    color: #ca6a82;
-    text-decoration: none;
-}
-
-.logo {
-    width: 1rem;
-    margin: 0 .1rem;
 }
 
 main {
-    display: grid;
+    width: 32rem;
+    padding: 2rem;
+    display: flexbox;
+    margin: 10rem auto 4rem;
+    background-color: rgb(16, 16, 16);
+    border: 1px solid rgb(180, 180, 180);
 }
 
-section {
-    position: relative;
-    display: grid;
-    padding: 2% 20%;
-}
-
-.content-card {
-    margin: 0 auto;
-    padding: 1rem;
-    background-color: hsla(0, 0%, 95%, 0.875);
-    backdrop-filter: blur(1px);
-    box-shadow: 0 .3rem .7rem hsla(0, 0%, 0%, 0.2);
-    border: 4px solid rgba(255, 255, 255, 0.1);
-    border-radius: 3px;
-    z-index: 2;
-    transition: all .3s ease-in-out;
-}
-
-.content-card:hover {
-    border: 4px solid #ca6881;
-}
-
-.content-card a {
-    color: #ca6a82;
-}
-
-.image-link {
-    border: initial;
-}
-
-#intro {
-    padding: 15% 20% 5%;
-}
-
-#projects {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 2rem;
-}
-
-#bio {
-    display: grid;
-    grid-gap: .1rem;
-}
-
-.card1Link {
-    color: #CA6A82;
-    border-bottom: 0 solid;
-    transition: border-width .1s;
-}
-
-.card1Link:hover {
-    border-width: .1rem;
-}
-
-.project-images {
-    margin: 2rem 0;
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: auto;
-}
-
-figure {
-    width: 70%;
-    margin: 0 auto;
-}
-
-figcaption {
-    font-size: 14pt
-}
-
-figcaption a{
-    font-size: 14pt;
-    text-decoration: underline;
-}
-
-img {
-    width: 100%;
-    margin: 1rem 0;
-}
-
-iframe {
-    width: 100%;
-    height: 500px;
+h1 {
+    font-size: 18pt;
+    margin-bottom: 2rem;
 }
 
 footer {
-    background-color: #CA6A82;
-    display: grid;
-    width: 100%;
-}
-
-.footwrap {
-    width: 70%;
+    color: rgba(255, 255, 255, 0.5);
     margin: 0 auto;
-    display: grid;
-    grid-gap: 1rem;
-    padding: 2rem 5%;
-    color: rgb(240, 240, 240);
-}
-
-.footwrap span a {
-    color: rgb(240, 240, 240);
-    border-bottom: 0 solid;
-    transition: border-width .1s;
-}
-
-.footwrap span a:hover {
-    border-width: .1rem;
-}
-
-@media screen and (min-width: 1000px) {
-
-    nav {
-        display: grid;
-        width: 80%;
-        margin: 0 auto;
-        grid-gap: 1rem;
-        grid-template-columns: 1rem 60vw auto auto;
-    }
-
-    section {
-        position: relative;
-        display: grid;
-        padding: 5% 20%;
-    }
-
-    #projects {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 2rem;
-    }
-
-    .project-images {
-        margin: 2rem 0;
-        display: grid;
-        grid-gap: 1rem;
-        grid-template-columns: auto auto auto;
-    }
-
-    /* footer {
-        background-color: #CA6A82;
-        color: rgb(240, 240, 240);
-        display: grid;
-        grid-gap: 1rem;
-        padding: 2rem;
-        grid-template-columns: 1fr 1fr 1fr;
-    } */
 }
